--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-hotjar": "^6.1.0",
+    "react-icons": "^5.2.1",
     "react-redux": "^8.1.3",
     "theme-change": "^2.3.0"
   },
